# devops-project_igor-v2

./: Readme.md
backup/: urls.py
backup/server-v1/: .env  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
docs/: CELERY_INTEGRATION.md  CORS_FIX.md  DJANGO_CELERY_COMPLETE.md  DJANGO_CELERY_FINAL.md  DUAL_ACCESS.md
f_brain/: .dockerignore  .env  Readme.md  docker-compose.yml
f_brain/client/: .dockerignore  .env  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
f_brain/docs/: 01-presentation-generale.md  02-architecture-globale.md  03-services-composants.md  04-deploiement-configuration.md  05-flux-travail-devops.md  README.md  (+5 more)
f_brain/server/: .dockerignore  .env  Dockerfile  db.sqlite3  pyproject.toml  readme.md  requirements.txt  update-poetry-lock.sh
f_brain/server/server_config/: settings.py  urls.py
f_brain/server/weather/: admin.py  api_urls.py  models.py  readme.md  serializers.py  services.py  tasks.py  urls.py  views.py
f_brain/server/weather/backup/: api_views-v1.py
f_brain/server/weather/management/commands/: sync_periodic_tasks.py
f_brain/server/weather/migrations/: 0001_initial.py  0002_alter_weathersearch_options_weathersearch_country_and_more.py
f_brain/server/weather/templates/weather/: dashboard.html
resources/: 1. Django-docker-sqlite.md  github.txt  project-guidelines.md  project-setup-guidelines.md
scripts/: dev-start.sh  dev-stop.sh  start-app.sh  start-celery-beat.sh  sync-periodic-tasks.sh  test-advanced-tasks.sh  test-app.sh  test-celery.sh  test-complete.sh  test-dual-access.sh
(+28 files in other folders)
